# rmq-chat

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
static/: index.html
