[tool.poetry]
name = "rmq-chat"
version = "0.1.0"
description = ""
authors = ["Nikita Bilous <nikita@bilous.me>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
pika = "^1.2.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
aio-pika = "^7.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
